# RMOS_2023

./: INTRODUCTION.md  INTRUDUCTION.md  README.md
rmos_bringup/: CMakeLists.txt  package.xml
rmos_bringup/configure/: daheng_cam_info.yaml  daheng_camera.xml  virtual_cam_info.yaml
rmos_bringup/launch/: normal_aim.launch.py
src/Algorithm/: CMakeLists.txt
src/Algorithm/configure/Debug/: debug.xml
src/Algorithm/configure/Detector/classifier/onnx_classifier/model/: model_res150.onnx  model_res25.onnx  model_res50.onnx  model_res75.onnx  modelv4_150.onnx  modelv4_200.onnx
src/Algorithm/configure/Detector/detector/cj_detector/: param.xml
src/Algorithm/configure/Detector/detector/traditional_detector/: param.xml
src/Algorithm/configure/Processer/ballistic_solver/: params.xml
src/Algorithm/configure/Processer/controler/: param.xml
src/Algorithm/configure/Tool/tracker/: param.xml
src/Algorithm/include/Base/: armor.hpp  const.hpp  target.hpp
src/Algorithm/include/Camera/camera_interfaces/: camera_interface.hpp
src/Algorithm/include/Camera/daheng/: daheng.hpp
src/Algorithm/include/Camera/virtual_cam/: virtual_cam.hpp
src/Algorithm/include/Debug/: debug.hpp
src/Algorithm/include/Dectector/classifier/cj_classifier/: cj_classifier.hpp
src/Algorithm/include/Dectector/classifier/onnx_classifier/: onnx_classifier.hpp
src/Algorithm/include/Dectector/detector/cj_detector/: cj_detector.hpp
src/Algorithm/include/Dectector/detector/traditional_detector/: detector.hpp
src/Algorithm/include/Dectector/detector_interfaces/: classifier_interface.hpp  detector_interface.hpp  solver_interface.hpp
src/Algorithm/include/Dectector/solver/pnp_solver/: pnp_solver.hpp
src/Algorithm/include/Processer/: ballistic_solver.hpp  controler.hpp
src/Algorithm/include/Processer/processer_interfaces/: ballistic_solver_interface.hpp
src/Algorithm/include/Tool/filter/: extend_kalman_filter.hpp
src/Algorithm/include/Tool/tracker/: tracker.hpp
src/Algorithm/include/Transporter/can/: can.hpp
src/Algorithm/src/Base/: armor.cpp
src/Algorithm/src/Camera/daheng/: daheng.cpp
src/Algorithm/src/Camera/virtual_cam/: virtual_cam.cpp
src/Algorithm/src/Debug/: debug.cpp
src/Algorithm/src/Dectector/classifier/cj_classifier/: cj_classifier.cpp
src/Algorithm/src/Dectector/classifier/onnx_classifier/: onnx_classifier.cpp
src/Algorithm/src/Dectector/detector/cj_detector/: cj_detector.cpp
src/Algorithm/src/Dectector/detector/traditional_detector/: detector.cpp
src/Algorithm/src/Dectector/solver/pnp_solver/: pnp_solver.cpp
src/Algorithm/src/Processer/: ballistic_solver.cpp  controler.cpp
src/Algorithm/src/Tool/filter/: extend_kalman_filter.cpp
src/Algorithm/src/Tool/tracker/: tracker.cpp
src/Algorithm/src/Transporter/can/: can.cpp
src/rmos_cam/: CMakeLists.txt  package.xml
src/rmos_cam/include/: cam_node.hpp
src/rmos_cam/src/: daheng_cam_node.cpp  virtual_cam_node.cpp
src/rmos_detector/: CMakeLists.txt  package.xml
src/rmos_detector/include/: detector_node.hpp
src/rmos_detector/src/: basic_detector_node.cpp
src/rmos_interfaces/: CMakeLists.txt  package.xml
src/rmos_interfaces/msg/: Aimpoint.msg  Armor.msg  AutoaimState.msg  Color.msg  Mode.msg  QuaternionTime.msg  Target.msg
src/rmos_processer/: CMakeLists.txt  package.xml
src/rmos_processer/include/: processer_node.hpp
src/rmos_processer/src/: processer_node.cpp
src/rmos_transporter/: CMakeLists.txt  package.xml
src/rmos_transporter/include/: comm_node.hpp
src/rmos_transporter/src/: can_comm_node.cpp
